# CppProjectTemplate

./: CMakeLists.txt  CMakePresets.json  README.md
examples/: exmaple.cpp
include/MyLib/: mylib.hpp
src/: mylib.cpp
